# pratice_commit

./: .gitignore  .pre-commit-config.yaml  README.md  hi.py  pyproject.toml
